# playing-py

./: README.md
admin/: app.py  pyproject.toml
admin/src/core/: bcrypt.py  database.py  seed.py
admin/src/core/auth/: __init__.py  user.py
admin/src/core/cats/: __init__.py  cat.py
admin/src/web/: __init__.py  config.py
admin/src/web/controllers/: auth.py  users.py
admin/src/web/helpers/: handler.py
admin/src/web/templates/: layout.html  not_found.html
admin/src/web/templates/auth/: login.html
admin/static/: style.css
